doc: Integrate automatically generated example in the documentation